sebelum fix
